<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_file_management_header"
        android:textSize="@dimen/header2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settings_file_management_select_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_button_text"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_file_management_select_file_text"
            android:textSize="@dimen/header3"/>


    </LinearLayout>


</LinearLayout>