<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recyclerview_cat_item"
        style="@style/material_card_view_style">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cat_item_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight=".9"
                android:textSize="@dimen/header2" />

            <ImageView
                android:id="@+id/cat_item_checkmark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight=".1"
                android:contentDescription="@string/checkmark"
                android:src="@drawable/ic_cat_selected"
                android:visibility="gone"
                android:scaleX="1.4"
                android:scaleY="1.4"/>

            <ImageView
                android:id="@+id/cat_item_expand_symbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight=".1"
                android:contentDescription="@string/expandable_symbol_description"
                android:src="@drawable/ic_expand_cat"
                android:visibility="gone"
                android:scaleX="1.4"
                android:scaleY="1.4"/>

            <ImageView
                android:id="@+id/cat_item_collapse_symbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight=".1"
                android:contentDescription="@string/collapsable_symbol_description"
                android:src="@drawable/ic_collapse_cat"
                android:visibility="gone"
                android:scaleX="1.4"
                android:scaleY="1.4"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/child_cat_items">

        <!--To be filled with child cats, if any-->
    </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>